--- a/eshop/src/app/pages/account/login/login.page.html
+++ b/eshop/src/app/pages/account/login/login.page.html
@@ -1,10 +1,10 @@
 <ion-content padding>
   <ion-grid>
-    <ion-row justify-content-center>
+    <ion-row class="ion-justify-content-center">
       <ion-col size-md="6">
         <form [formGroup]="form">
           <br>
-          <p text-center class="animated fadeIn">
+          <p text-center class="text-center animated fadeIn">
             <img src="assets/icon/icon.png" alt="Dachshop" width="150">
           </p>
           <br>
@@ -24,11 +24,11 @@
           </ion-list>
           <br>
           <ion-button color="light" expand="full" size="large" class="animated fadeIn" [disabled]="!form.valid"
-            (click)="submit()">
+          (click)="submit()">
             Entrar
           </ion-button>
-          <ion-button color="light" fill="clear" expand="full" class="animated fadeIn" (click)="resetPassword()">ESQUECI
-            MINHA SENHA
+          <ion-button color="light" fill="clear" expand="full" class="animated fadeIn">
+            ESQUECI MINHA SENHA
           </ion-button>
         </form>
       </ion-col>
