--- a/eshop/src/app/pages/account/login/login.page.html
+++ b/eshop/src/app/pages/account/login/login.page.html
@@ -27,7 +27,7 @@
           (click)="submit()">
             Entrar
           </ion-button>
-          <ion-button color="light" fill="clear" expand="full" class="animated fadeIn">
+          <ion-button color="light" fill="clear" expand="full" class="animated fadeIn" (click)="resetPassword()">
             ESQUECI MINHA SENHA
           </ion-button>
         </form>
